--- a/index.html
+++ b/index.html
@@ -5,6 +5,125 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="icon"
+      href="C:\Users\Korisnik44\YamahaSite\Slike\YamahaLogo.jpg"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Play:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <header id="header">
+      <div class="logo">
+        <a href="#home"
+          ><img
+            class="logo_img"
+            src="C:\Users\Korisnik44\YamahaSite\Slike\yamaharews.png"
+            alt=""
+        /></a>
+      </div>
+      <ul class="head_ul">
+        <li><a href="#sekcija_motor">Motocikli</a></li>
+        <li><a href="#sekcija_skuter">Skuteri</a></li>
+        <li><a href="#sekcija_cetvorotockas">Cetvorotockasi</a></li>
+        <li><a href="#sekcija_oprema">Oprema</a></li>
+      </ul>
+    </header>
+    <section id="home">
+      <div class="home_text">
+        <h1>YAMAHA</h1>
+        <p>Nijedan put nije dug na dva tocka</p>
+      </div>
+    </section>
+    <!-- Motori -->
+    <section id="sekcija_motor">
+      <div class="card">
+        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <div class="card_text">
+          <p>Medzid</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <div class="card_text">
+          <p>Medzid</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <div class="card_text">
+          <p>Medzid</p>
+        </div>
+      </div>
+    </section>
+    <!-- Skuteri -->
+    <section id="sekcija_skuter">
+      <div class="card">
+        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <div class="card_text">
+          <p>Medzid</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <div class="card_text">
+          <p>Medzid</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <div class="card_text">
+          <p>Medzid</p>
+        </div>
+      </div>
+    </section>
+    <!-- Ceiri tocka -->
+    <section id="sekcija_cetvorotockas">
+      <div class="card">
+        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <div class="card_text">
+          <p>Medzid</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <div class="card_text">
+          <p>Medzid</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <div class="card_text">
+          <p>Medzid</p>
+        </div>
+      </div>
+    </section>
+    <!-- Oprema -->
+    <section id="sekcija_oprema">
+      <div class="card">
+        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <div class="card_text">
+          <p>Medzid</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <div class="card_text">
+          <p>Medzid</p>
+        </div>
+      </div>
+      <div class="card">
+        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <div class="card_text">
+          <p>Medzid</p>
+        </div>
+      </div>
+    </section>
+    <footer></footer>
+  </body>
 </html>
