--- a/index.html
+++ b/index.html
@@ -21,10 +21,7 @@
     <header id="header">
       <div class="logo">
         <a href="#home"
-          ><img
-            class="logo_img"
-            src="C:\Users\Korisnik44\YamahaSite\Slike\yamaharews.png"
-            alt=""
+          ><img class="logo_img" src="./Slike/yamaharews.png" alt=""
         /></a>
       </div>
       <ul class="head_ul">
