--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Yamaha Shop</title>
     <link rel="stylesheet" href="style.css" />
     <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+
+    <link
       rel="icon"
       href="C:\Users\Korisnik44\YamahaSite\Slike\YamahaLogo.jpg"
     />
@@ -43,6 +50,9 @@
         <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
         <div class="card_text">
           <p>Medzid</p>
+          <p>Medzid</p>
+          <p>Medzid</p>
+          <p>Medzid</p>
         </div>
       </div>
       <div class="card">
@@ -75,6 +85,8 @@
       <div class="card">
         <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
         <div class="card_text">
+          <p>Medzid</p>
+          <p>Medzid</p>
           <p>Medzid</p>
         </div>
       </div>
@@ -121,6 +133,11 @@
         </div>
       </div>
     </section>
-    <footer></footer>
+    <footer>
+      <a href=""><i class="fab fa-twitter"></i></a>
+      <a href="">1</a>
+      <a href="">1</a>
+      <a href="">1</a>
+    </footer>
   </body>
 </html>
