--- a/index.html
+++ b/index.html
@@ -49,45 +49,52 @@
       <div class="card">
         <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
         <div class="card_text">
-          <p>Medzid</p>
-          <p>Medzid</p>
-          <p>Medzid</p>
-          <p>Medzid</p>
+          <p>Naked</p>
+          <p>Prava kombinacija snage i komfora.</p>
+          <p><a href="">kupuj ovde</a></p>
         </div>
       </div>
       <div class="card">
-        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <img class="card_img" src="./Slike/YamahaSportCard.jpg" alt="" />
         <div class="card_text">
-          <p>Medzid</p>
+          <p>Sport</p>
+          <p>Prvi izbor zaljubljenika u brzinu</p>
         </div>
       </div>
       <div class="card">
-        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <img class="card_img" src="./Slike/yamahaADVENTUREcard.jpg" alt="" />
         <div class="card_text">
-          <p>Medzid</p>
+          <p>Adventure</p>
+          <p>Kada gradsku voznju i off-road</p>
+          <p>stavis u jedan paket</p>
         </div>
       </div>
     </section>
     <!-- Skuteri -->
     <section id="sekcija_skuter">
       <div class="card">
-        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <img class="card_img" src="./Slike/YamahaAEROX.jpg" alt="" />
         <div class="card_text">
-          <p>Medzid</p>
+          <p>Aerox</p>
+          <p>Gradska masina</p>
+          <p>sa samo 50cc stignete bilo gde</p>
+          <p>za tren</p>
         </div>
       </div>
       <div class="card">
-        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <img class="card_img" src="./Slike/YamahaXMAX.jpg" alt="" />
         <div class="card_text">
-          <p>Medzid</p>
+          <p>X Max 300</p>
+          <p>Zatresite ulice sa stilom</p>
+          <p>u prakticnom izdanju od 300cc</p>
         </div>
       </div>
       <div class="card">
-        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <img class="card_img" src="./Slike/YamahaTMAX.jpg" alt="" />
         <div class="card_text">
-          <p>Medzid</p>
-          <p>Medzid</p>
-          <p>Medzid</p>
+          <p>T Max 500</p>
+          <p>Bilo gde , bilo kada</p>
+          <p>Ispod udobnog sedista je 500cc</p>
         </div>
       </div>
     </section>
@@ -134,10 +141,20 @@
       </div>
     </section>
     <footer>
-      <a href=""><i class="fab fa-twitter"></i></a>
-      <a href="">1</a>
-      <a href="">1</a>
-      <a href="">1</a>
+      <a target="_blank" href="https://twitter.com/yamahamotoreu?lang=en"
+        ><i class="fab fa-twitter"></i
+      ></a>
+      <a target="_blank" href="https://www.facebook.com/YamahaMotorEU/"
+        ><i class="fab fa-facebook-f"></i
+      ></a>
+      <a target="_blank" href="https://www.instagram.com/yamahamotoreu/?hl=en"
+        ><i class="fab fa-instagram"></i
+      ></a>
+      <a
+        target="_blank"
+        href="https://www.youtube.com/channel/UCG_GruQL_aP3QrS_zJQf7Kg"
+        ><i class="fab fa-youtube"></i
+      ></a>
     </footer>
   </body>
 </html>
