Zavrsen Sajt jej

--- a/index.html
+++ b/index.html
@@ -101,42 +101,57 @@
     <!-- Ceiri tocka -->
     <section id="sekcija_cetvorotockas">
       <div class="card">
-        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <img class="card_img" src="./Slike/YamahaRaptor125cc.jpg" alt="" />
         <div class="card_text">
-          <p>Medzid</p>
+          <p>Raptor</p>
+          <p>Pravi izbor za najmladje vozace</p>
+          <p>sa skromnim ali snaznim</p>
+          <p>motorom od 125cc</p>
         </div>
       </div>
       <div class="card">
-        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <img class="card_img" src="./Slike/YamahaYFZ.jpg" alt="" />
         <div class="card_text">
-          <p>Medzid</p>
+          <p>Yfz</p>
+          <p>Jedino sto vam treba su</p>
+          <p>Put i puno goriva</p>
+          <p>Yfz sa 450cc je pravi izbor za druzenje sa prirodom</p>
         </div>
       </div>
       <div class="card">
-        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <img class="card_img" src="./Slike/YamahaGrizlii.jpg" alt="" />
         <div class="card_text">
-          <p>Medzid</p>
+          <p>Grizzly</p>
+          <p>Kamen, zemlja, blato ili voda</p>
+          <p>Grizzly sa 700cc ne prepoznaje prepreku</p>
         </div>
       </div>
     </section>
     <!-- Oprema -->
     <section id="sekcija_oprema">
       <div class="card">
-        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <img class="card_img" src="./Slike/KACIGAAAA.jpg" alt="" />
         <div class="card_text">
-          <p>Medzid</p>
+          <p>Vozi bezbedno</p>
+          <p>Vozi sa stilom</p>
+          <p>Kaciga je simbol svakog bajkera</p>
         </div>
       </div>
       <div class="card">
-        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <img class="card_img" src="./Slike/YamahaJAKNA.jpg" alt="" />
         <div class="card_text">
-          <p>Medzid</p>
+          <p>Jakna</p>
+          <p>Osnovna potreba svakog bajkera</p>
+          <p>Prirodna koza i kvalitetna koza cuva</p>
+          <p>od loseg vremena i bilo kog kontakta</p>
         </div>
       </div>
       <div class="card">
-        <img class="card_img" src="./Slike/yamahacard1pic.jpg" alt="" />
+        <img class="card_img" src="./Slike/YamahaStitnici.jpg" alt="" />
         <div class="card_text">
-          <p>Medzid</p>
+          <p>Stitnici</p>
+          <p>Nesto sto ima svaki moto entuzijasta</p>
+          <p>Prava zastita za svako putovanje</p>
         </div>
       </div>
     </section>
