--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
       crossorigin="anonymous"
     />
 
-    <link
-      rel="icon"
-      href="C:\Users\Korisnik44\YamahaSite\Slike\YamahaLogo.jpg"
-    />
+    <link rel="icon" href="./Slike/YamahaLogo.jpg" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -142,7 +139,7 @@
         <div class="card_text">
           <p>Jakna</p>
           <p>Osnovna potreba svakog bajkera</p>
-          <p>Prirodna koza i kvalitetna koza cuva</p>
+          <p>Prirodna i kvalitetna koza cuva</p>
           <p>od loseg vremena i bilo kog kontakta</p>
         </div>
       </div>
